# multirag

./: .gitignore  LICENSE  README.md  pyproject.toml
src/multi_rag/: __init__.py  main.py
