[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi_rag"
version = "0.1.0"
authors = [
    { name="Phani Srimadhav Mula", email="phanisrimadhav.mula@gmail.com" },
]
description = "A module to facilitate local testing of RAG pipeline for multiple datatypes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "sentence-transformers>=2.5.0",
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain>=0.2.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com"